Fixed white spaces

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@
     width: 300px;
 }
 
-.middle9{
+.middle6{
     display: flex;
     justify-content: space-around;
     align-items: center;
